--- a/kubernetes/cd-jenkins.yaml
+++ b/kubernetes/cd-jenkins.yaml
@@ -393,6 +393,7 @@ spec:
             path: /login
             port: http
             scheme: HTTP
+          intialDelaySeconds: 30
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 5
